# mcp-control-plane

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: agent_safety_demo.py  demo_server.py  devops_policy.yaml  lowlevel_server.py  policy.yaml  safety_policy.yaml
src/mcp_guard/: __init__.py  audit.py  budget.py  dryrun.py  guard.py  policy.py  resolvers.py  trace.py  validation.py
